--- a/bower.json
+++ b/bower.json
@@ -14,14 +14,22 @@
     "material-search": "material-search#*",
     "leaflet-maps": "leaflet-maps#*",
     "paper-tabs": "paper-tabs#*",
-    "yasgui-polymer": "yasgui-polymer#*",
     "reviews-table": "reviews-table#*",
-    "number-chart": "number-chart#*",
+    "number-chart": "number-chart#^1.1.1",
     "google-apis": "GoogleWebComponents/google-apis#^1.0.0",
+    "google-chart-elasticsearch": "google-chart-elasticsearch#^1.1.0",
     "iron-icons": "PolymerElements/iron-icons#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
-    "polymer": "Polymer/polymer#^1.1.0"
+    "polymer": "Polymer/polymer#^1.1.0",
+    "jquery": "jquery#^2.1.4",
+    "elasticsearchjs-import": "DigElements/elasticsearchjs-import#~1.0.0",
+    "elasticjs-import": "DigElements/elasticjs-import#~1.0.1",
+    "webcomponentsjs": "< 1.0.0"
+
   },
-  "license": "MIT",
-  "homepage": "https://lab.cluster.gsi.dit.upm.es/sefarad/dashboard-tourpedia"
+ "resolutions": {
+   "webcomponentsjs": "0.7.24"
+ },
+ "license": "Apache-2.0",
+ "homepage": "https://lab.cluster.gsi.dit.upm.es/sefarad/dashboard-tourpedia"
 }
